actualStyle.css
body {
  --white: #eee;
  --black: #222;
  --main: #76d669;
  --main-dark: #865f23;
  --main-bright: rgb(185, 255, 168);
  --gray: rgb(224, 224, 224);
  --contrast: rgb(109, 9, 183);
  --clear: rgba(0, 0, 0, 0);
}

* {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

html {
  height: 100%;
}

body {
  margin: 0;
  background-color: var(--gray);
  display: grid;
  min-height: 100%;
}
header {
  background-image: url("Assets/PatreonBanner.png");
  background-attachment: fixed;
  width: 100%;
  grid-row-start: 1;
  grid-row-end: 2;
}

.header {
  background-image: linear-gradient(to bottom, var(--clear) 50%, black 100%);
  height: 350px;
  border-bottom: solid black 4px;
  width: 100%;
  margin: 0;
}

.flex {
  display: flex;
  height: 100%;
}

.hover-near-bottom {
  margin-bottom: 75px;
  margin-top: auto;
}

section
{
    background-color: var(--white);
    margin-bottom: 2em;
}

.header h1 {
  font-weight: 100;
  color: var(--white);
  font-size: 3rem;
  width: 100%;
  text-align: left;
  margin-left: 2rem;
}

.user-avatar {
  border-radius: 50%;
  border: solid var(--main-dark) 4px;
  height: 100px;
  width: 100px;
}

.center-body {
  width: 40em;
  max-width: 100%;
  margin: 0 auto;
  padding: 2em 5em;
}
 p {
     line-height: 2;
     margin-bottom: 4em;
 }

 .footer
{
    background-color: var(--main-dark);
    padding-bottom: 1em;
    color: var(--main-bright);
}

.footer span:last-child
{
    float:right;
}

.footer a
{
    text-decoration: none;
    color: var(--main-bright);
}

